Fixed overflow of timer banner on Content page

--- a/finalProject/src/app/app.component.css
+++ b/finalProject/src/app/app.component.css
@@ -6,7 +6,7 @@ nav {
   position: fixed;
   top: 0;
   width: 99%;
-  z-index: 2;
+  z-index: 4;
 
   /* padding-right: -240px; */
   /* margin-bottom: 50px; */
