--- a/finalProject/src/app/components/content-styled/content-styled.component.css
+++ b/finalProject/src/app/components/content-styled/content-styled.component.css
@@ -2,37 +2,58 @@
     font-family: 'Outfit', sans-serif;
 }
 
-.background {
-    background-color: rgb(0, 0, 0);
-    width: 100%;
+.pageContainer {
+    /* background-color: rgb(218, 0, 0); */
+    width: 100vw;
+    max-width: 100%;
+    overflow-x: hidden;
     height: fit-content;
+    /* box-sizing: border-box; */
     /* overflow: hidden; */
+    
 }
 
 /* For First tier content */
 
 .bannerFirstAndSecondTiers {
-    position: fixed;
+    position: absolute;
     top: 9%;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     color: black;
     height: 2rem;
     width: 100%;
     /* margin-top: rem; */
-    padding-bottom: .5rem;
-    z-index: 3;
+    padding-bottom: 1rem;
+    z-index: 2;
 }
 
 .bannerThirdTier {
-    position: fixed;
+    position: absolute;
     top: 9%;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     color: black;
     height: 2rem;
     width: 100%;
     /* margin-top: rem; */
-    padding: 1.5rem;
-    z-index: 2;
+    padding-bottom: 1rem;
+    z-index: 1;
+    /* overflow:hidden; */
+}
+
+/* .bannerThirdTier {
+    background-color: white;
+    color: black;
+    height: 2rem;
+    width: 100%;
+    padding: 1rem;
+    z-index: 1;
+} */
+
+div#timer.bannerFirstAndSecondTiers, div#timerTierThree.bannerThirdTier{
+    width: 100vw;
+    max-width:100%;
+    overflow-x: hidden;
+    /* overflow: hidden; */
 }
 
 h1,
@@ -41,7 +62,7 @@ h1,
     font-weight: 500;
     text-align: center;
     font-size: 2vw;
-    padding: 1rem;
+    /* padding: 1rem; */
     padding-top: 1.7rem;
     /* padding-right: 5rem; */
 }
@@ -54,17 +75,6 @@ h1.tierOneHeader {
     padding-left: 1.2rem;
     /* font-weight: 400; */
     /* text-shadow: ; */
-}
-
-
-
-.bannerThirdTier {
-    background-color: white;
-    color: black;
-    height: 2rem;
-    width: 100%;
-    padding: 1rem;
-    z-index: 1;
 }
 
 div.cardFirstTier {
@@ -81,6 +91,8 @@ div.cardFirstTier {
 h1.liveVideoText {
     justify-content: center;
     font-size: 8rem;
+
+    font-weight: 700;
     width: 10rem;
     line-height: 10rem;
     text-align: left;
@@ -148,12 +160,12 @@ mat-card.cardVideosFirst {
 } */
 
 .btn-upgrade {
-    position: fixed;
+    position: absolute;
     right: 12%;
     top: 11%;
     padding: 0.5rem;
     border-radius: 6px;
-    z-index: 4;
+    z-index: 3;
     cursor: pointer;
     font-weight: 600;
     background-color: white;
@@ -248,8 +260,8 @@ mat-card.contentCardTwo,
 
 mat-card.cardVideosSecondThird {
     /* background-color: white; */
-    width: 18rem;
-    height: 12rem;
+    width: 23rem;
+    height: 15rem;
     margin: 3rem;
     margin-top: 2rem;
     padding: 1rem;
@@ -282,7 +294,7 @@ mat-card.cardVideosSecondThird {
 
 .cardHeadertype {
     text-align: left;
-    padding-left: 6rem;
+    padding-left: 4.5rem;
     padding-bottom: 3rem;
     width: 100%;
 }
@@ -297,21 +309,30 @@ div.upgradeContainer {
     flex-wrap: wrap;
     position: absolute;
     padding-top: 0.2%;
-    /* top: 95%; */
+    /* top: 25%; */
     right: 4%;
     /* height: 3rem; */
     width: 25rem;
     flex-direction: row;
     justify-content: space-between;
-    z-index: 1;
+    z-index: 3;
     /* margin-top: 15%; */
+}
+
+/* #fixed{
+    position: absolute;
+} */
+
+.smallerFont{
+    font-size: 2rem;
+    line-height: 0rem;
 }
 
 
 .upgradeTierText {
     color: white;
     font-size: 3rem;
-    line-height: 3rem;
+    line-height: 2.9rem;
 }
 
 
@@ -363,9 +384,11 @@ label {
     color: #c7ff20;
 }
 
- .yearAndRecipes{
+.yearAndRecipes{
     display: flex;
     flex-direction: column;
+    padding-left: 2rem;
+    padding-right: 3rem;
  } 
 
 p.recipes {
